--- a/app.json
+++ b/app.json
@@ -4,10 +4,12 @@
     "slug": "speed-math-trainer",
     "version": "1.0.0",
     "orientation": "portrait",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#007AFF"
+      "backgroundColor": "#F0F7FF"
     },
     "ios": {
       "supportsTablet": true,
@@ -15,7 +17,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "backgroundColor": "#007AFF"
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#F0F7FF"
       },
       "package": "com.speedmath.trainer"
     },
