--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "speed-math-trainer",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/App-Logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/App-Logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#F0F7FF"
     },
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/App-Logo.png",
         "backgroundColor": "#F0F7FF"
       },
       "package": "com.speedmath.trainer"
